k8s/gateway/01-main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: respondlyai-global-gateway
  namespace: respondlyai
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
